@@ -14,7 +14,6 @@ application {
     "-Djakarta.xml.bind.JAXBContextFactory=org.eclipse.persistence.jaxb.JAXBContextFactory",
     "-Djakarta.xml.bind.context.factory=org.eclipse.persistence.jaxb.JAXBContextFactory",
     "--add-opens=org.glassfish.json.jaxrs/org.glassfish.json.jaxrs=org.glassfish.hk2.utilities",
-    "--add-exports=org.apache.commons.logging/org.apache.commons.logging.impl=spring.core" //dreadful hack for hashicorp
   ]
   startScripts.enabled = true
 }
